apps/app1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: jmutai/kuard-amd64:latest

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: scripts-volume
              mountPath: /scripts

            - name: aws-secret-file-volume
              mountPath: /aws-secrets
              readOnly: true

          resources:
            requests:
              memory: "64Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "512m"

      volumes:
        - name: scripts-volume
          configMap:
            name: app1-config-file
            defaultMode: 755

        - name: aws-secret-file-volume
          secret:
            secretName: app1-secret-file
            defaultMode: 755
